--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
   },
   "dependencies": {
     "axios": "^0.21.0",
+    "buefy": "^0.9.4",
+    "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
     "lodash": "^4.17.20",
     "vue": "^2.6.11",
+    "vue-chartjs": "^3.5.1",
     "vue-router": "^3.2.0",
     "vuetrend": "^0.3.4",
     "vuex": "^3.4.0"
